# mailing_service

./: Readme.md  env.txt  pyproject.toml
blog/: models.py  urls.py
blog/migrations/: 0001_initial.py
config/: settings.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_mailing_client_mailing_message.py  0003_alter_mailing_mailing_status.py  0004_remove_mailing_message_mailing_message.py  0005_remove_mailing_client_remove_mailing_message_and_more.py  0006_remove_message_client_mailing_client_and_more.py  0007_remove_mailing_client_message_client.py  0008_remove_message_client_remove_message_mailing_and_more.py  0009_alter_mailing_log_alter_mailing_mailing_duration.py  0010_alter_mailing_options.py  0011_remove_mailing_log_log_creation_time_log_mailing_and_more.py  0012_mailing_creator_message_creator.py  0013_client_creator.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_form.html  client_list.html  home.html  log_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_form.html  message_list.html
users/: forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_content_manager.py
users/templates/users/: login.html  register.html  user_form.html  user_list.html
